# openapi_server/models/play.py
@@ -1,3 +1,5 @@
+# coding: utf-8
+
 from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
@@ -12,22 +14,22 @@ class Play(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, id=None, user_id=None, track_id=None, timestamp=None):  # noqa: E501
+    def __init__(self, id: int=None, user_id: int=None, track_id: int=None, timestamp: str=None):  # noqa: E501
         """Play - a model defined in OpenAPI
 
         :param id: The id of this Play.  # noqa: E501
-        :type id: str
+        :type id: int
         :param user_id: The user_id of this Play.  # noqa: E501
-        :type user_id: str
+        :type user_id: int
         :param track_id: The track_id of this Play.  # noqa: E501
-        :type track_id: str
+        :type track_id: int
         :param timestamp: The timestamp of this Play.  # noqa: E501
         :type timestamp: str
         """
         self.openapi_types = {
-            'id': str,
-            'user_id': str,
-            'track_id': str,
+            'id': int,        # <--- CAMBIO: int
+            'user_id': int,   # <--- CAMBIO: int
+            'track_id': int,  # <--- CAMBIO: int
             'timestamp': str
         }
 
@@ -44,7 +46,7 @@ class Play(Model):
         self._timestamp = timestamp
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Play':
+    def from_dict(cls, dikt: dict) -> 'Play':
         """Returns the dict as a model
 
         :param dikt: A dict.
@@ -55,64 +57,64 @@ class Play(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def id(self) -> str:
+    def id(self) -> int:
         """Gets the id of this Play.
 
 
         :return: The id of this Play.
-        :rtype: str
+        :rtype: int
         """
         return self._id
 
     @id.setter
-    def id(self, id: str):
+    def id(self, id: int):
         """Sets the id of this Play.
 
 
         :param id: The id of this Play.
-        :type id: str
+        :type id: int
         """
 
         self._id = id
 
     @property
-    def user_id(self) -> str:
+    def user_id(self) -> int:
         """Gets the user_id of this Play.
 
 
         :return: The user_id of this Play.
-        :rtype: str
+        :rtype: int
         """
         return self._user_id
 
     @user_id.setter
-    def user_id(self, user_id: str):
+    def user_id(self, user_id: int):
         """Sets the user_id of this Play.
 
 
         :param user_id: The user_id of this Play.
-        :type user_id: str
+        :type user_id: int
         """
 
         self._user_id = user_id
 
     @property
-    def track_id(self) -> str:
+    def track_id(self) -> int:
         """Gets the track_id of this Play.
 
 
         :return: The track_id of this Play.
-        :rtype: str
+        :rtype: int
         """
         return self._track_id
 
     @track_id.setter
-    def track_id(self, track_id: str):
+    def track_id(self, track_id: int):
         """Sets the track_id of this Play.
 
 
         :param track_id: The track_id of this Play.
-        :type track_id: str
+        :type track_id: int
         """
 
         self._track_id = track_id
